--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-asgiref==3.8.1
-dj-database-url==2.2.0
-Django==5.0.7
-django-debug-toolbar==4.4.6
-django-heroku==0.3.1
-psycopg2==2.9.9
-psycopg2-binary==2.9.9
-sqlparse==0.5.0
-typing_extensions==4.12.2
-whitenoise==6.7.0
-psycopg2==2.9.3
-pillow==9.2.8
+django-debug-toolbar
+asgiref==3.7.2
+Django==5.0.4
+sqlparse==0.4.4
+psycopg[binary]==3.1.12
+Pillow
+django-allauth
+requests
+pyotp
+djangorestframework
+python-dotenv
+jwt
+whitenoise
